# rp2040-freertos-template

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  FreeRTOSConfig.h  main.c
